--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-AIRFLOW_IMAGE_NAME=custom_airflow:1.0.0
+AIRFLOW_IMAGE_NAME=apache/airflow:2.5.1
+#AIRFLOW_IMAGE_NAME=custom_airflow:1.0.0
 AIRFLOW_UID=50000
